Use AWX operator image
The operator source was recently moved to the github.com/ansible
org and its name was changed to awx-operator. This change updates
the template used to deploy the operator use use the correct image,
which is now awx-operator instead of tower-operator.
used to

--- a/deploy/tower-operator.yaml
+++ b/deploy/tower-operator.yaml
@@ -113,14 +113,14 @@ spec:
             - /usr/local/bin/ao-logs
             - /tmp/ansible-operator/runner
             - stdout
-          image: "ansible/tower-operator:0.4.0"
+          image: "ansible/awx-operator:0.4.0"
           imagePullPolicy: "Always"
           volumeMounts:
             - mountPath: /tmp/ansible-operator/runner
               name: runner
               readOnly: true
         - name: operator
-          image: "ansible/tower-operator:0.4.0"
+          image: "ansible/awx-operator:0.4.0"
           imagePullPolicy: "Always"
           volumeMounts:
             - mountPath: /tmp/ansible-operator/runner
